--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bootstrap": "^5.2.0-beta1",
     "concurrently": "^7.2.1",
     "cross-env": "^7.0.3",
-    "electron": "^19.0.1",
+    "electron-is-dev": "^2.0.0",
     "jest-editor-support": "^30.1.0",
     "react": "^18.1.0",
     "react-app-menu": "^1.0.11",
@@ -31,8 +31,21 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn electron:start\"",
-    "electron:build": "",
+    "electron:build": "yarn build && electron-builder -c.extraMetadata.main=build/main.js",
     "electron:start": "wait-on tcp:3000 && electron ."
+  },
+  "build": {
+    "extends": null,
+    "appId": "com.twileloop.upwork",
+    "files": [
+      "dist/**/*",
+      "build/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "eslintConfig": {
     "extends": [
